bindings/c/include/DocumentFilters.h

	typedef wchar_t IGR_UCS2;
	typedef long IGR_LONG;
	typedef unsigned long IGR_ULONG;
typedef uint16_t IGR_UCS2;
typedef int32_t IGR_LONG;
typedef uint32_t IGR_ULONG;
	typedef unsigned char IGR_BYTE;
	typedef short int IGR_SHORT;
	typedef int64_t IGR_LONGLONG;
	typedef IGR_LONG HPAGE;
	typedef IGR_LONG HCANVAS;
	typedef IGR_LONG IGR_RETURN_CODE;
	typedef struct tagError_Control_Block
	{
		char Msg[238];
		IGR_SHORT MsgId;
	} Error_Control_Block;
	struct IGR_Stream
	{
		ULONG(CALLBACK* Open)(struct IGR_Stream* stream);
		ULONG(CALLBACK* Read)(struct IGR_Stream* stream, void* buffer, ULONG bufferSize);
		IGR_LONGLONG(CALLBACK* Seek)(struct IGR_Stream* stream, IGR_LONGLONG offset, ULONG whence);
		void(CALLBACK* Close)(struct IGR_Stream* stream);
	};
	struct IGR_Page_Form_Element
	{
		const void* reserved;
		IGR_UCS2 name[255];
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_PAGE_FORM_ELEMENT_TYPE type;
		IGR_LONG flags;
		IGR_LONG fontSize;
		IGR_TEXT_STYLE_TYPE fontStyle;
		IGR_LONG rotation;
		IGR_TEXT_ALIGN_TYPE textAlignment;
		IGR_LONG selectedItem;
		IGR_LONG option_count;
		IGR_LONG reserved2[8];
	};
	struct IGR_Bookmark
	{
		const void* reserved;
		IGR_LONG flags;
		IGR_UCS2 title[255];
		IGR_BOOKMARK_ACTION_TYPE action;
		IGR_UCS2 dest[1024];
		IGR_LONG level;
		IGR_BOOKMARK_FIT_TYPE fit;
		IGR_LONG zoom;
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_LONG color;
		IGR_LONG text_style;
		IGR_LONG reserved2[8];
	};
	struct IGR_Hyperlink
	{
		const void* reserved;
		IGR_HYPERLINK_ACTION_TYPE type;
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_LONG page_number;
		IGR_HYPERLINK_FIT_TYPE dest_fit;
		IGR_LONG dest_zoom;
		IGR_LONG dest_left;
		IGR_LONG dest_top;
		IGR_LONG dest_right;
		IGR_LONG dest_bottom;
		IGR_HYPERLINK_FLAGS_TYPE flags;
		IGR_LONG reserved2[8];
	};
	struct IGR_Subfile_Info
	{
		IGR_ULONG struct_size;
		IGR_SUBFILE_INFO_FLAG_TYPE flags;
		IGR_UCS2* id;
		IGR_ULONG id_size;
		IGR_UCS2* name;
		IGR_ULONG name_size;
		IGR_UCS2* comment;
		IGR_ULONG comment_size;
		IGR_ULONGLONG size;
		IGR_ULONGLONG date;
	};
	struct IGR_Subfile_Enumerator;
	typedef struct IGR_Subfile_Enumerator* HSUBFILES;
	struct IGR_Annotation
	{
		const void* reserved;
		IGR_ANNOTATION_TYPE type;
		IGR_ANNOTATION_FLAGS_TYPE flags;
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_LONG reserved2[8];
	};
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Subfiles_Enumerator(IGR_LONG docHandle, HSUBFILES* enumerator, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Subfiles_Next(HSUBFILES handle, IGR_UCS2* id, IGR_UCS2* name, IGR_LONGLONG* date, IGR_LONGLONG* size,
	                                             Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Subfiles_Next_Ex(HSUBFILES handle, struct IGR_Subfile_Info* result, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Subfiles_Reset(HSUBFILES handle, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Subfiles_Close(HSUBFILES handle, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Make_Stream_From_Functions(void* context, IGR_MAKE_STREAM_FROM_FUNCTIONS_FLAGS_TYPE flags,
	                                                          IGR_LONGLONG(CALLBACK* seek)(void* context, IGR_LONGLONG offset,
	                                                                                       IGR_ULONG whence),
	                                                          IGR_ULONG(CALLBACK* read)(void* context, void* buffer, IGR_ULONG buffer_size),
	                                                          IGR_ULONG(CALLBACK* write)(void* context, const void* buffer,
	                                                                                     IGR_ULONG buffer_size),
	                                                          IGR_LONG(CALLBACK* action)(void* context, int actionId, void* action_data),
	                                                          void(CALLBACK* destruct)(void* context), struct IGR_Stream** stream,
	                                                          Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Images_Enumerator(IGR_LONG docHandle, HSUBFILES* enumerator, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Images_Enumerator(IGR_LONG docHandle, HSUBFILES* enumerator, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Form_Element_Count(HPAGE pageHandle, IGR_LONG* count, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Form_Elements(HPAGE pageHandle, IGR_LONG index, IGR_LONG* count,
	                                                      struct IGR_Page_Form_Element* items, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Form_Element_Str(const struct IGR_Page_Form_Element* item,
	                                                         IGR_PAGE_FORM_ELEMENT_GET_TYPE value_type, IGR_LONG char_count,
	                                                         IGR_UCS2* buffer, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Form_Element_Option_Str(const struct IGR_Page_Form_Element* item,
	                                                                IGR_PAGE_FORM_ELEMENT_GET_TYPE value_type, IGR_LONG option_index,
	                                                                IGR_LONG char_count, IGR_UCS2* buffer, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Arc(HCANVAS canvas, IGR_LONG x, IGR_LONG y, IGR_LONG x2, IGR_LONG y2, IGR_LONG x3, IGR_LONG y3,
	                                          IGR_LONG x4, IGR_LONG y4, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_AngleArc(HCANVAS canvas, IGR_LONG x, IGR_LONG y, IGR_LONG radius, IGR_LONG startAngle,
	                                               IGR_LONG sweepAngle, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Chord(HCANVAS canvas, IGR_LONG x, IGR_LONG y, IGR_LONG x2, IGR_LONG y2, IGR_LONG x3, IGR_LONG y3,
	                                            IGR_LONG x4, IGR_LONG y4, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Ellipse(HCANVAS canvas, IGR_LONG x, IGR_LONG y, IGR_LONG x2, IGR_LONG y2,
	                                              Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Rect(HCANVAS canvas, IGR_LONG x, IGR_LONG y, IGR_LONG x2, IGR_LONG y2,
	                                           Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_LineTo(HCANVAS canvas, IGR_LONG x, IGR_LONG y, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_MoveTo(HCANVAS canvas, IGR_LONG x, IGR_LONG y, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Pie(HCANVAS canvas, IGR_LONG x, IGR_LONG y, IGR_LONG x2, IGR_LONG y2, IGR_LONG x3, IGR_LONG y3,
	                                          IGR_LONG x4, IGR_LONG y4, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_RoundRect(HCANVAS canvas, IGR_LONG x, IGR_LONG y, IGR_LONG x2, IGR_LONG y2, IGR_LONG radius,
	                                                Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_TextOut(HCANVAS canvas, IGR_LONG x, IGR_LONG y, const IGR_UCS2* text, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_TextRect(HCANVAS canvas, IGR_LONG x, IGR_LONG y, IGR_LONG x2, IGR_LONG y2, const IGR_UCS2* text,
	                                               IGR_TEXTRECT_TYPE flags, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_MeasureText(HCANVAS canvas, const IGR_UCS2* text, IGR_LONG* width, IGR_LONG* height,
	                                                  Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_SetPen(HCANVAS canvas, IGR_LONG color, IGR_LONG width, IGR_PEN_TYPE style,
	                                             Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_SetBrush(HCANVAS canvas, IGR_LONG color, IGR_BRUSH_TYPE style, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_SetFont(HCANVAS canvas, const IGR_UCS2* fontFamily, IGR_LONG size, IGR_TEXT_STYLE_TYPE style,
	                                              Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_SetOpacity(HCANVAS canvas, IGR_BYTE opacity, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_DrawImage(HCANVAS canvas, IGR_LONG x, IGR_LONG y, void* imagedata, size_t imagesize,
	                                                const IGR_UCS2* mimetype, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_DrawScaleImage(HCANVAS canvas, IGR_LONG x, IGR_LONG y, IGR_LONG x2, IGR_LONG y2, void* imagedata,
	                                                     size_t imagesize, const IGR_UCS2* mimetype, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Rotation(HCANVAS canvas, IGR_LONG degrees, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Reset(HCANVAS canvas, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Annotate_JSON(HCANVAS canvas, const IGR_UCS2* json, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Hyperlink_Count(HPAGE pageHandle, IGR_LONG* count, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Hyperlinks(HPAGE pageHandle, IGR_LONG index, IGR_LONG* count, struct IGR_Hyperlink* items,
	                                                   Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Hyperlink_Str(const struct IGR_Hyperlink* item, IGR_HYPERLINK_GET_VALUE_TYPE value_type,
	                                                      IGR_LONG char_count, IGR_UCS2* buffer, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Blank_Page(HCANVAS canvas, const IGR_UCS2* options, IGR_LONG width, IGR_LONG height,
	                                                 const void* reserved, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Annotation_Count(HPAGE pageHandle, IGR_LONG* count, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Annotations(HPAGE pageHandle, IGR_LONG index, IGR_LONG* count, struct IGR_Annotation* items,
	                                                    Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Annotation_Str(const struct IGR_Annotation* item, const IGR_UCS2* path, IGR_LONG* char_count,
	                                                       IGR_UCS2* buffer, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Annotation_Long(const struct IGR_Annotation* item, const IGR_UCS2* path, IGR_LONG* buffer,
	                                                        Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Bookmarks_Clear(HCANVAS canvas, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Canvas_Bookmarks_Append(HCANVAS canvas, const struct IGR_Bookmark* bookmark, Error_Control_Block* error);