bindings/python/src/DocumentFilters/DocumentFiltersAPI.py


        self.IGR_Canvas_Arc = self._libISYS11df.IGR_Canvas_Arc
        self.IGR_Canvas_Arc.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Arc.restype = IGR_RETURN_CODE

        self.IGR_Canvas_AngleArc = self._libISYS11df.IGR_Canvas_AngleArc
        self.IGR_Canvas_AngleArc.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_AngleArc.restype = IGR_RETURN_CODE

        self.IGR_Canvas_Chord = self._libISYS11df.IGR_Canvas_Chord
        self.IGR_Canvas_Chord.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Chord.restype = IGR_RETURN_CODE

        self.IGR_Canvas_Ellipse = self._libISYS11df.IGR_Canvas_Ellipse
        self.IGR_Canvas_Ellipse.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Ellipse.restype = IGR_RETURN_CODE

        self.IGR_Canvas_Rect = self._libISYS11df.IGR_Canvas_Rect
        self.IGR_Canvas_Rect.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Rect.restype = IGR_RETURN_CODE

        self.IGR_Canvas_LineTo = self._libISYS11df.IGR_Canvas_LineTo
        self.IGR_Canvas_LineTo.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_LineTo.restype = IGR_RETURN_CODE

        self.IGR_Canvas_MoveTo = self._libISYS11df.IGR_Canvas_MoveTo
        self.IGR_Canvas_MoveTo.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_MoveTo.restype = IGR_RETURN_CODE

        self.IGR_Canvas_Pie = self._libISYS11df.IGR_Canvas_Pie
        self.IGR_Canvas_Pie.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Pie.restype = IGR_RETURN_CODE

        self.IGR_Canvas_RoundRect = self._libISYS11df.IGR_Canvas_RoundRect
        self.IGR_Canvas_RoundRect.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_RoundRect.restype = IGR_RETURN_CODE

        self.IGR_Canvas_TextOut = self._libISYS11df.IGR_Canvas_TextOut
        self.IGR_Canvas_TextOut.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_TextOut.restype = IGR_RETURN_CODE

        self.IGR_Canvas_TextRect = self._libISYS11df.IGR_Canvas_TextRect
        self.IGR_Canvas_TextRect.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(None), IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_TextRect.restype = IGR_RETURN_CODE

        self.IGR_Canvas_MeasureText = self._libISYS11df.IGR_Canvas_MeasureText
        self.IGR_Canvas_MeasureText.argtypes = [HCANVAS, ctypes.POINTER(None), ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_MeasureText.restype = IGR_RETURN_CODE

        self.IGR_Canvas_SetPen = self._libISYS11df.IGR_Canvas_SetPen
        self.IGR_Canvas_SetPen.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_SetPen.restype = IGR_RETURN_CODE

        self.IGR_Canvas_SetBrush = self._libISYS11df.IGR_Canvas_SetBrush
        self.IGR_Canvas_SetBrush.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_SetBrush.restype = IGR_RETURN_CODE

        self.IGR_Canvas_SetFont = self._libISYS11df.IGR_Canvas_SetFont
        self.IGR_Canvas_SetFont.argtypes = [HCANVAS, ctypes.POINTER(None), IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_SetFont.restype = IGR_RETURN_CODE

        self.IGR_Canvas_SetOpacity = self._libISYS11df.IGR_Canvas_SetOpacity
        self.IGR_Canvas_SetOpacity.argtypes = [HCANVAS, IGR_BYTE, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_SetOpacity.restype = IGR_RETURN_CODE

        self.IGR_Canvas_DrawImage = self._libISYS11df.IGR_Canvas_DrawImage
        self.IGR_Canvas_DrawImage.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, ctypes.POINTER(ctypes.c_char), ctypes.c_size_t, ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_DrawImage.restype = IGR_RETURN_CODE

        self.IGR_Canvas_DrawScaleImage = self._libISYS11df.IGR_Canvas_DrawScaleImage
        self.IGR_Canvas_DrawScaleImage.argtypes = [HCANVAS, IGR_LONG, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(ctypes.c_char), ctypes.c_size_t, ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_DrawScaleImage.restype = IGR_RETURN_CODE

        self.IGR_Canvas_Rotation = self._libISYS11df.IGR_Canvas_Rotation
        self.IGR_Canvas_Rotation.argtypes = [HCANVAS, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Rotation.restype = IGR_RETURN_CODE

        self.IGR_Canvas_Reset = self._libISYS11df.IGR_Canvas_Reset
        self.IGR_Canvas_Reset.argtypes = [HCANVAS, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Reset.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Form_Element_Count = self._libISYS11df.IGR_Get_Page_Form_Element_Count
        self.IGR_Get_Page_Form_Element_Count.argtypes = [HPAGE, ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Form_Element_Count.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Form_Elements = self._libISYS11df.IGR_Get_Page_Form_Elements
        self.IGR_Get_Page_Form_Elements.argtypes = [HPAGE, IGR_LONG, ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_Page_Form_Element), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Form_Elements.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Form_Element_Str = self._libISYS11df.IGR_Get_Page_Form_Element_Str
        self.IGR_Get_Page_Form_Element_Str.argtypes = [ctypes.POINTER(IGR_Page_Form_Element), IGR_LONG, IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Form_Element_Str.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Form_Element_Option_Str = self._libISYS11df.IGR_Get_Page_Form_Element_Option_Str
        self.IGR_Get_Page_Form_Element_Option_Str.argtypes = [ctypes.POINTER(IGR_Page_Form_Element), IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Form_Element_Option_Str.restype = IGR_RETURN_CODE

        self.IGR_Get_Subfiles_Enumerator = self._libISYS11df.IGR_Get_Subfiles_Enumerator
        self.IGR_Get_Subfiles_Enumerator.argtypes = [IGR_LONG, ctypes.POINTER(HSUBFILES), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Subfiles_Enumerator.restype = IGR_RETURN_CODE

        self.IGR_Get_Images_Enumerator = self._libISYS11df.IGR_Get_Images_Enumerator
        self.IGR_Get_Images_Enumerator.argtypes = [IGR_LONG, ctypes.POINTER(HSUBFILES), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Images_Enumerator.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Images_Enumerator = self._libISYS11df.IGR_Get_Page_Images_Enumerator
        self.IGR_Get_Page_Images_Enumerator.argtypes = [IGR_LONG, ctypes.POINTER(HSUBFILES), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Images_Enumerator.restype = IGR_RETURN_CODE

        self.IGR_Subfiles_Next = self._libISYS11df.IGR_Subfiles_Next
        self.IGR_Subfiles_Next.argtypes = [HSUBFILES, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(IGR_LONGLONG), ctypes.POINTER(IGR_LONGLONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Subfiles_Next.restype = IGR_RETURN_CODE

        self.IGR_Subfiles_Next_Ex = self._libISYS11df.IGR_Subfiles_Next_Ex
        self.IGR_Subfiles_Next_Ex.argtypes = [HSUBFILES, ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Subfiles_Next_Ex.restype = IGR_RETURN_CODE

        self.IGR_Subfiles_Reset = self._libISYS11df.IGR_Subfiles_Reset
        self.IGR_Subfiles_Reset.argtypes = [HSUBFILES, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Subfiles_Reset.restype = IGR_RETURN_CODE

        self.IGR_Subfiles_Close = self._libISYS11df.IGR_Subfiles_Close
        self.IGR_Subfiles_Close.argtypes = [HSUBFILES, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Subfiles_Close.restype = IGR_RETURN_CODE

        self.IGR_Canvas_Blank_Page = self._libISYS11df.IGR_Canvas_Blank_Page
        self.IGR_Canvas_Blank_Page.argtypes = [HCANVAS, ctypes.POINTER(None), IGR_LONG, IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Blank_Page.restype = IGR_RETURN_CODE

        self.IGR_Canvas_Annotate_JSON = self._libISYS11df.IGR_Canvas_Annotate_JSON
        self.IGR_Canvas_Annotate_JSON.argtypes = [HCANVAS, ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Annotate_JSON.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Hyperlink_Count = self._libISYS11df.IGR_Get_Page_Hyperlink_Count
        self.IGR_Get_Page_Hyperlink_Count.argtypes = [HPAGE, ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Hyperlink_Count.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Hyperlinks = self._libISYS11df.IGR_Get_Page_Hyperlinks
        self.IGR_Get_Page_Hyperlinks.argtypes = [HPAGE, IGR_LONG, ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_Hyperlink), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Hyperlinks.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Hyperlink_Str = self._libISYS11df.IGR_Get_Page_Hyperlink_Str
        self.IGR_Get_Page_Hyperlink_Str.argtypes = [ctypes.POINTER(IGR_Hyperlink), IGR_LONG, IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Hyperlink_Str.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Annotation_Count = self._libISYS11df.IGR_Get_Page_Annotation_Count
        self.IGR_Get_Page_Annotation_Count.argtypes = [HPAGE, ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Annotation_Count.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Annotations = self._libISYS11df.IGR_Get_Page_Annotations
        self.IGR_Get_Page_Annotations.argtypes = [HPAGE, IGR_LONG, ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_Annotation), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Annotations.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Annotation_Str = self._libISYS11df.IGR_Get_Page_Annotation_Str
        self.IGR_Get_Page_Annotation_Str.argtypes = [ctypes.POINTER(IGR_Annotation), ctypes.POINTER(None), ctypes.POINTER(IGR_LONG), ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Annotation_Str.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Annotation_Long = self._libISYS11df.IGR_Get_Page_Annotation_Long
        self.IGR_Get_Page_Annotation_Long.argtypes = [HPAGE, ctypes.POINTER(None), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Annotation_Long.restype = IGR_RETURN_CODE

        self.IGR_Canvas_Bookmarks_Clear = self._libISYS11df.IGR_Canvas_Bookmarks_Clear
        self.IGR_Canvas_Bookmarks_Clear.argtypes = [HCANVAS, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Bookmarks_Clear.restype = IGR_RETURN_CODE

        self.IGR_Canvas_Bookmarks_Append = self._libISYS11df.IGR_Canvas_Bookmarks_Append
        self.IGR_Canvas_Bookmarks_Append.argtypes = [HCANVAS, ctypes.POINTER(IGR_Bookmark), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Canvas_Bookmarks_Append.restype = IGR_RETURN_CODE
